refactor(rbac): introduce canonical three-plane role and permission catalog